# my_bevy_game

./: Cargo.toml  LICENSE  README.md
assets/: creature.blend1
src/: main.rs
src/systems/: circles.rs  color_generator.rs  dynamic_textures.rs  mod.rs  screenshot.rs
