[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
#bevy_prototype_lyon = "0.5.0"
image = "0.24"
rand = "0.8.5"
num = "0.3.0"
palette = "0.6.0"